fixed about, skills, working on projects now

--- a/about.html
+++ b/about.html
@@ -81,15 +81,15 @@
                     <div class="list-bg">
                         <ol>
                             <li>I like making lists</li>
-                            <li>I love learning new things</li>
-                            <li>I love programming</li>
-                            <li>I love to push myself</li>
+                            <li>I am eager to learn new things</li>
+                            <li>I love programming and working on projects</li>
+                            <li>I love to challenge myself in all different ways</li>
                             <li>I love my pets</li>
                             <li>I am dedicated to my work</li>
-                            <li>I like to sew</li>
-                            <li>I am nineteen</li>
-                            <li>I enjoy spending time alone</li>
-                            <li>I love designing</li>
+                            <li>I love to exercise and stay healthy</li>
+                            <li>I enjoy designing</li>
+                            <li>I enjoy collaborating with others,</li>
+                            <li>As well as spending time alone</li>
                         </ul>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
 
         <section class="skills">
             <h3><a name="to-skills">SKILLS</a></h3>
-            <h4 id="design"><span class="feature-icon"></span> development </h4>
+            <h4 id="design"><span class="feature-icon"></span> > development </h4>
             <div class="skills-row">
                 <div class="skill-item">
                     <img src="img/skills/css.svg" alt="css" class="skill-img img-f">
