fixing front page mobile

--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
                 </div>
             </div>
             <div class="welcome">
-                <h4>...welcome to my portfolio,</h4><br>
-                <h4>what would you like to do?</h4>
+                <h4>...welcome to my portfolio!</h4><br>
             </div>
-            <div class="welcome-d">
-                <h4>...welcome to my portfolio, what would you like to do?</h4>
-            </div>
+            <!-- <div class="welcome-d">
+                <h4>...welcome to my portfolio!</h4>
+            </div> -->
         </section>
 
         <div class="menu-options">
