--- a/about.html
+++ b/about.html
@@ -110,25 +110,80 @@
         <section class="skills">
             <h3><a name="to-skills">SKILLS</a></h3>
             <h4 id="design"><span class="feature-icon"></span> > development </h4>
-            <div class="skills-row">
+            <div class="skills-row skills-margin-b" >
                 <div class="skill-item">
-                    <img src="img/skills/css.svg" alt="css" class="skill-img img-f">
-                    <p>CSS</p>
+                    <img src="img/skills/svg/exp.svg" alt="css" class="skill-img img-f" id="express">
+                    <p id="express-p">Express </p>
                     <p class="rating">★★★☆☆</p>
+                </div>
+                <div class="skill-item">
+                    <img src="img/skills/svg/react.svg" alt="ruby" class="skill-img ruby img-f">
+                    <p>React</p>
+                    <p class="rating">★★☆☆☆</p>
+                </div>
+                <div class="skill-item">
+                    <img src="img/skills/svg/node.svg" alt="html" class="skill-img img-f" id="node">
+                    <p>Node</p>
+                    <p class="rating">★★☆☆☆</p>
+                </div>
+            </div>
+            <div class="skills-row skills-margin-b">
+                <div class="skill-item ">
+                    <img src="img/skills/svg/mongo.svg" alt="css" class="skill-img img-f" id="mongo">
+                    <p>Mongo DB</p>
+                    <p class="rating">★★☆☆☆</p>
                 </div>
                 <div class="skill-item">
                     <img src="img/skills/ruby.svg" alt="ruby" class="skill-img ruby img-f">
                     <p>Ruby</p>
-                    <p class="rating">★★☆☆☆</p>
+                    <p class="rating">★★★★☆</p>
+                </div>
+                <div class="skill-item">
+                    <img src="img/skills/svg/rails.svg" alt="html" class="skill-img img-f">
+                    <p>Ruby on Rails</p>
+                    <p class="rating">★★★★☆</p>
+                </div>
+            </div>
+
+            <div class="skills-row " id="row-last">
+                <div class="skill-item">
+                    <img src="img/skills/svg/js.svg" alt="illustrator" class="skill-img">
+                    <p>Javascript</p>
+                    <p class="rating">★★★☆☆</p>
+                </div>
+
+                <div class="skill-item">
+                    <img src="img/skills/svg/github.svg" alt="indesign" class="skill-img">
+                    <p>Github</p>
+                    <p class="rating">★★★☆☆</p>
+                </div>
+
+                <!-- <div class="skill-item">
+                    <img src="img/skills/photoshop.svg" alt="photoshop" class="skill-img">
+                    <p>Adobe Photoshop</p>
+                    <p class="rating"><a name="to-projects">★★★☆☆</a></p>
+                </div>   -->
+            </div>
+
+            <h4 id="design"><span class="feature-icon">></span> design </h4>
+            <div class="skills-row skills-margin-b">
+                <div class="skill-item">
+                    <img src="img/skills/css.svg" alt="css" class="skill-img img-f">
+                    <p>CSS</p>
+                    <p class="rating">★★★★☆</p>
+                </div>
+                <div class="skill-item">
+                    <img src="img/skills/ruby.svg" alt="ruby" class="skill-img ruby img-f">
+                    <p>Ruby</p>
+                    <p class="rating">★★★★☆</p>
                 </div>
                 <div class="skill-item">
                     <img src="img/skills/html.svg" alt="html" class="skill-img img-f">
                     <p>html</p>
-                    <p class="rating">★★★☆☆</p>
+                    <p class="rating">★★★★☆</p>
                 </div>
             </div>
 
-            <h4 id="design"><span class="feature-icon">></span> design </h4>
             <div class="skills-row " id="row-last">
                 <div class="skill-item">
                     <img src="img/skills/illustrator.svg" alt="illustrator" class="skill-img">
