--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
 
             <div class="skills-row " id="row-last">
                 <div class="skill-item">
-                    <img src="img/skills/svg/js.svg" alt="illustrator" class="skill-img">
+                    <img src="img/skills/SVG/js.svg" alt="illustrator" class="skill-img">
                     <p>Javascript</p>
                     <p class="rating">★★★☆☆</p>
                 </div>
