--- a/about.html
+++ b/about.html
@@ -112,24 +112,24 @@
             <h4 id="design"><span class="feature-icon"></span> > development </h4>
             <div class="skills-row skills-margin-b" >
                 <div class="skill-item">
-                    <img src="img/skills/svg/exp.svg" alt="css" class="skill-img img-f" id="express">
+                    <img src="img/skills/SVG/exp.svg" alt="css" class="skill-img img-f" id="express">
                     <p id="express-p">Express </p>
                     <p class="rating">★★★☆☆</p>
                 </div>
                 <div class="skill-item">
-                    <img src="img/skills/svg/react.svg" alt="ruby" class="skill-img ruby img-f">
+                    <img src="img/skills/SVG/react.svg" alt="ruby" class="skill-img ruby img-f">
                     <p>React</p>
                     <p class="rating">★★☆☆☆</p>
                 </div>
                 <div class="skill-item">
-                    <img src="img/skills/svg/node.svg" alt="html" class="skill-img img-f" id="node">
+                    <img src="img/skills/SVG/node.svg" alt="html" class="skill-img img-f" id="node">
                     <p>Node</p>
                     <p class="rating">★★☆☆☆</p>
                 </div>
             </div>
             <div class="skills-row skills-margin-b">
                 <div class="skill-item ">
-                    <img src="img/skills/svg/mongo.svg" alt="css" class="skill-img img-f" id="mongo">
+                    <img src="img/skills/SVG/mongo.svg" alt="css" class="skill-img img-f" id="mongo">
                     <p>Mongo DB</p>
                     <p class="rating">★★☆☆☆</p>
                 </div>
@@ -139,7 +139,7 @@
                     <p class="rating">★★★★☆</p>
                 </div>
                 <div class="skill-item">
-                    <img src="img/skills/svg/rails.svg" alt="html" class="skill-img img-f">
+                    <img src="img/skills/SVG/rails.svg" alt="html" class="skill-img img-f">
                     <p>Ruby on Rails</p>
                     <p class="rating">★★★★☆</p>
                 </div>
@@ -153,7 +153,7 @@
                 </div>
 
                 <div class="skill-item">
-                    <img src="img/skills/svg/github.svg" alt="indesign" class="skill-img">
+                    <img src="img/skills/SVG/github.svg" alt="indesign" class="skill-img">
                     <p>Github</p>
                     <p class="rating">★★★☆☆</p>
                 </div>
