pushing logos with sass

--- a/about.html
+++ b/about.html
@@ -173,8 +173,8 @@
                     <p class="rating">★★★★☆</p>
                 </div>
                 <div class="skill-item">
-                    <img src="img/skills/ruby.svg" alt="ruby" class="skill-img ruby img-f">
-                    <p>Ruby</p>
+                    <img src="img/skills/SVG/sass.svg" alt="ruby" class="skill-img ruby img-f">
+                    <p>Sass</p>
                     <p class="rating">★★★★☆</p>
                 </div>
                 <div class="skill-item">
