image gallery for mobile

--- a/about.html
+++ b/about.html
@@ -212,14 +212,18 @@
                 <div class="projects-rows">
                     </a>
                         <div class="container1 f-img col-9">
-                            <img src="img/project-img/1x/terminal.jpg" alt="ruby-app">
-                            <div class="centered"><p>ruby terminal game</p></div>
+                            <a href="https://github.com/MeikaFreckelton/MidnightSnack" target="_blank">
+                            <img src="img/project-img/1x/midnightsnack.png" alt="ruby-app">
+                            <div class="centered"><p>Ruby terminal game</p></div>
+                        </a>
                         </div>
 
                     
                     <div class="container1 col-9">
-                        <img src="img/project-img/1x/ui.jpg" alt="UI/UX">
-                        <div class="centered"><p>UI/UX design</p></div>
+                        <a href="site_wireframes.html">
+                            <img src="img/project-img/1x/ui.jpg" alt="UI/UX">
+                            <div class="centered"><p>Project Wireframe Design</p></div>
+                        </a>
                     </div>
                 </div>
                 <div class="container1 last-img">
