--- a/site_wireframes.html
+++ b/site_wireframes.html
@@ -106,12 +106,92 @@
             
 
         </div>
-        <div class="middle-row-images">
+        <div class="heading">
+            <h3>Tablet Wireframes</h3>
+        </div>
+        <div class="tablet-images">
+            <div>
+                <a target="_blank" href="img/wireframes/tablet-w/home.png">
+                    <img src="img/wireframes/tablet-w/home.png" alt="mobile">
+                </a>
+                <div class="desc"><p>Home</p></div>
+
+            </div>
+            <div>
+                <a target="_blank" href="img/wireframes/tablet-w/about.png">
+                    <img src="img/wireframes/tablet-w/me.png" alt="mobile">
+                </a>
+                <div class="desc"><p>About</p></div>
+
+            </div>
+            <div>
+                <a target="_blank" href="img/wireframes/tablet-w/projects-skills.png">
+                    <img src="img/wireframes/tablet-w/projects.png" alt="mobile">
+                </a>
+                <div class="desc"><p>Projects && Skills</p></div>
+
+            </div>
+        <!-- </div> -->
+        <!-- <div class="bottom-row-mobile rows"> -->
+            <div>
+                <a target="_blank" href="img/wireframes/tablet-w/blog.png">
+                    <img src="img/wireframes/tablet-w/blog.png" alt="mobile">
+                </a>
+                <div class="desc"><p>Blog</p></div>
+
+            </div>
+            <div>
+                <a target="_blank" href="img/wireframes/tablet-w/contact.png">
+                    <img src="img/wireframes/tablet-w/contact.png" alt="mobile">
+                </a>
+                <div class="desc"><p>Contact Page</p></div>
+
+            </div>
 
 
 
         </div>
-        <div class="bottom-row-images">
+        <div class="heading">
+            <h3>Desktop Wireframes</h3>
+        </div>
+        <div class="desktop-images">
+            <div>
+                <a target="_blank" href="img/wireframes/desktop-w/home.png">
+                    <img src="img/wireframes/desktop-w/home.png" alt="mobile">
+                </a>
+                <div class="desc"><p>Home</p></div>
+
+            </div>
+            <div>
+                <a target="_blank" href="img/wireframes/desktop-w/about.png">
+                    <img src="img/wireframes/desktop-w/about.png" alt="mobile">
+                </a>
+                <div class="desc"><p>About</p></div>
+
+            </div>
+            <div>
+                <a target="_blank" href="img/wireframes/desktop-w/projects-skills.png">
+                    <img src="img/wireframes/desktop-w/projects.png" alt="mobile">
+                </a>
+                <div class="desc"><p>Projects && Skills</p></div>
+
+            </div>
+        <!-- </div> -->
+        <!-- <div class="bottom-row-mobile rows"> -->
+            <div>
+                <a target="_blank" href="img/wireframes/desktop-w/blog.png">
+                    <img src="img/wireframes/desktop-w/blog.png" alt="mobile">
+                </a>
+                <div class="desc"><p>Blog</p></div>
+
+            </div>
+            <div>
+                <a target="_blank" href="img/wireframes/desktop-w/contact.png">
+                    <img src="img/wireframes/desktop-w/contact.png" alt="mobile">
+                </a>
+                <div class="desc"><p>Contact Page</p></div>
+
+            </div>
 
 
 
