--- a/blog.html
+++ b/blog.html
@@ -119,9 +119,9 @@
         <ul>
             <li><p class="copy-c">&copy</p></li>
             <li><p class="copyright-d">copyright Meika Freckelton | 2020</p></li>
-            <li><a href="#"><i class="fab fa-github"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+            <li><a target="_blank" href="https://github.com/MeikaFreckelton"><i class="fab fa-github"></i></a></li>
+            <li><a target="_blank" href="https://twitter.com/meikafreckelton"><i class="fab fa-twitter"></i></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/meika-freckelton-269741195/"><i class="fab fa-linkedin"></i></a></li>
         </ul>
     </footer>
 
