making responsive for desktop

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                     </div>
 
                     <div class="resume">
-                        <a href="#" class="resume-link">my resume</a>
+                        <a target="_blank" href="/resume/resume.pdf" class="resume-link">my resume</a>
                     </div>
                 </div>
 
