--- a/contact.html
+++ b/contact.html
@@ -63,9 +63,11 @@
 
         <section class="details">
             <div class="c-details">
+                <img src="/img/icons/phone.svg" class="contact-icon"></img>
                 <a href="tel:##########">0452 634 523</a><br>
+                <img src="/img/icons/mail.svg" class="contact-icon"></img>
                 <a href="mailto:meikafreckelton@gmail.com">meikafreckelton@gmail.com</a>
-                <div>
+                <div id="contact-links">
                     <a target="_blank" href="https://github.com/MeikaFreckelton"><i class="fab fa-github"></i></a>
                     <a target="_blank" href="https://twitter.com/meikafreckelton"><i class="fab fa-twitter"></i></a>
                     <a target="_blank" href="https://www.linkedin.com/in/meika-freckelton-269741195/"><i class="fab fa-linkedin"></i></a>   
