fixed up projects, skills etc.

--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,8 @@
                     </li>
 
                     <li>
-                        <a href="about.html#to-projects" class="nav-links">Projects</a>
+                        <a href="projects.html" class="nav-links">Projects</a>
                         
-                    </li>
-                    <li>
-                        <a href="blog.html" class="nav-links">Blog</a>
                     </li>
                     <li>
                         <a href="contact.html" class="nav-links">Contact</a>
@@ -58,8 +55,10 @@
 
 
 
-
-        <h3 class="contactme">CONTACT ME</h3>
+        <div class="heading">
+            <h3>CONTACT ME</h3>
+        </div>
+        
 
         <section class="details">
             <div class="c-details">
