--- a/site_wireframes.html
+++ b/site_wireframes.html
@@ -42,10 +42,7 @@
                         <a href="#" class="logo hover"><img src="SVG/desktop-black.svg" alt="logo"></a>
                     </li>
                     <li>
-                        <a href="about.html#to-projects" class="nav-links">Projects</a>
-                    </li>
-                    <li>
-                        <a href="blog.html" class="nav-links">Blog</a>
+                        <a href="projects.html" class="nav-links">Projects</a>
                     </li>
                     <li>
                         <a href="contact.html" class="nav-links">Contact</a>
