--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <section class="home-content">
             <div class="landing">
                 <div class="landing-contents">
-                    <h4>I am...</h4><br>
+                    <h4>my name is</h4><br>
                     <div class="desktop-logos">
                         <img src="SVG/desktop-pink.svg" alt="logo" id="PinkLogo">
                         <img src="SVG/desktop-black.svg" alt="logo" id="BlackLogo">
                     </div><br>
-                    <h4 class="web"><b>&lt;</b>JuniorDev/Designer<b>/&gt;</b></h4>
+                    <h4 class="web">I am a JuniorDev/Designer</h4>
                 </div>
             </div>
             <div class="welcome">
@@ -33,8 +33,7 @@
             <ul>
                 <li class="col-4"><a href="about.html">Learn about me</a></li>
                 <li class="col-4"><a href="about.html#to-skills">Look at my skills</a></li>
-                <li class="col-4"><a href="about.html#to-projects">Look at my projects</a></li>
-                <li class="col-4"><a href="blog.html">Read my blog posts</a></li>
+                <li class="col-4"><a href="projects.html">Look at my projects</a></li>
                 <li class="col-4 odd-item"><a href="#">&copy Copyright Meika Freckelton | 2020</a></li>
                 <li class="col-4"><a href="contact.html">Contact me</a></li>
             </ul>
