fixing up desktop responsive

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
 
         <section class="skills">
             <h3><a name="to-skills">SKILLS</a></h3>
-            <h4 id="design"><span class="feature-icon"></span> > development </h4>
+            <h4 class="skill-heading"><span class="feature-icon"></span> > development </h4>
             <div class="skills-row skills-margin-b" >
                 <div class="skill-item">
                     <img src="img/skills/SVG/exp.svg" alt="css" class="skill-img img-f" id="express">
@@ -167,7 +167,7 @@
                 </div>   -->
             </div>
 
-            <h4 id="design"><span class="feature-icon">></span> design </h4>
+            <h4 class="skill-heading"><span class="feature-icon">></span> design </h4>
             <div class="skills-row skills-margin-b">
                 <div class="skill-item">
                     <img src="img/skills/css.svg" alt="css" class="skill-img img-f">
