--- a/about.html
+++ b/about.html
@@ -26,13 +26,12 @@
     <div class="mobile-container">
         <nav class="navbar" id="mytopnav">
             <div class="logo-wrap">
-                <a href="index.html" class="logo mobile-logo m-no-hover"><img src="SVG/mbile-pink.svg" alt="logo"></a>
-                <a href="index.html" class="logo mobile-logo m-hover"><img src="SVG/mbile-black.svg" alt="logo"></a>
+                <a href="index.html" class="logo mobile-logo m-hover logo-txt-mobile">Meika Freckelton</a>
             </div>
                 <div class="menu-wrap">
                 <ul class="main-nav" id="myLinks">
-                    <li class="logo-li">
-                        <a href="index.html" class="logo mobile-logo m-hover logo-txt">Meika Freckelton</a>
+                    <li class="logo-li"id="desktop-logo">
+                        <a href="index.html" class="logo mobile-logo m-hover logo-txt" >Meika Freckelton</a>
                     
                     </li>
                     <li>
@@ -102,7 +101,7 @@
             <div class="col-8">
                 <h4 class="past-edu"><span class="feature-icon">></span>  past education</h4>
                 <div class="container-a">
-                    <img src="SVG/timeline.svg" alt="timeline" class="timeline">
+                    <img src="SVG/timeline-m.svg" alt="timeline" class="timeline">
                     <img src="SVG/timeline-d.svg" alt="timeline" class="timeline-d">
                 </div>
             </div>
