--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="img/title/m-icon.svg" type="image/icon type">
     <script src="https://kit.fontawesome.com/86a9ff069d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/isw3mwx.css">
 
