--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://kit.fontawesome.com/86a9ff069d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/isw3mwx.css">
-
+    <link rel="icon" href="img/title/m-icon.svg" type="image/icon type">
     <title>contact me</title>
 </head>
 <body>
