--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <title>meika</title>
+    <link rel="icon" href="img/title/m-icon.svg" type="image/icon type">
 </head>
 
 <body>
