--- a/about.html
+++ b/about.html
@@ -214,13 +214,13 @@
         
 
         <div class="copyr">
-            <p class="copyright-f copy-copyright">&copy Copyright Meika Freckelton | 2020</p>
+            <p class="copyright-f copy-copyright">&copy; Copyright Meika Freckelton | 2020</p>
         </div>
     </main>
 
     <footer class="footer-icons">
         <ul>
-            <li><p class="copy-c">&copy</p></li>
+            <li><p class="copy-c">&copy;</p></li>
             <li><p class="copyright-d">copyright Meika Freckelton | 2020</p></li>
             <li><a target="_blank" href="https://github.com/MeikaFreckelton"><i class="fab fa-github"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/meikafreckelton""><i class="fab fa-twitter"></i></a></li>
