--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <title>meika</title>
-    <link rel="icon" href="img/title/m-icon.svg" type="image/icon type">
+    <link rel="icon" href="img/title/m-icon.svg" type="image/icon">
 </head>
 
 <body>
@@ -32,17 +32,17 @@
 
         <div class="menu-options">
             <ul>
-                <a href="about.html"><li class="col-4">Learn about me</li></a>
-                <a href="about.html#to-skills"><li class="col-4">Look at my skills</li></a>
-                <a href="projects.html"><li class="col-4">Look at my projects</li></a>
-                <a href="contact.html"><li class="col-4">Contact me</li></a>
-                <a href="#" class="odd-item-d"><li class="col-4 ">&copy Copyright Meika Freckelton | 2020</li></a>
+                <li class="col-4"><a href="about.html">Learn about me</a></li>
+                <li class="col-4"><a href="about.html#to-skills">Look at my skills</a></li>
+                <li class="col-4"><a href="projects.html">Look at my projects</a></li>
+                <li class="col-4"><a href="contact.html">Contact me</a></li>
+                <li class="col-4 odd-item-d"><a href="#" >&copy; Copyright Meika Freckelton | 2020</a></li>
             </ul>
         </div>
     </main>
 
     <div class="copyr">
-        <p class="copyright-f copy-copyright">&copy Copyright Meika Freckelton | 2020</p>
+        <p class="copyright-f copy-copyright">&copy; Copyright Meika Freckelton | 2020</p>
     </div>
 
 </body>
