testing links fix

--- a/about.html
+++ b/about.html
@@ -75,8 +75,8 @@
                         <img src="img/placeholder.jpg" class="pfp" alt="Profile">
                     </div>
 
-                    <div class="resume">
-                        <a target="_blank" href="/resume/resume.pdf" class="resume-link">my resume</a>
+                    <div class="resume resume-link">
+                        <a href="/resume/resume.pdf">my resume</a>
                     </div>
                 </div>
 
