--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                     </div>
 
                     <div class="resume resume-link">
-                        <a href="/resume/resume.pdf" download="resume">my resume</a>
+                        <a href="./resume/resume.pdf" download="resume">my resume</a>
                     </div>
                 </div>
 
