--- a/about.html
+++ b/about.html
@@ -75,9 +75,10 @@
                         <img src="img/placeholder.jpg" class="pfp" alt="Profile">
                     </div>
 
-                    <div class="resume resume-link">
-                        <a href="./resume/resume.pdf" download="resume">my resume</a>
-                    </div>
+                    <!-- <div class="resume resume-link">
+                        <a href="./resume/resume.pdf" download>my resume</a>
+                    </div> -->
+                    <a href="./resume/resume.pdf" download>my resume</a>
                 </div>
 
                 <div class="facts column-2">
