fixing resume issue

--- a/about.html
+++ b/about.html
@@ -75,10 +75,10 @@
                         <img src="img/placeholder.jpg" class="pfp" alt="Profile">
                     </div>
 
-                    <!-- <div class="resume resume-link">
-                        <a href="./resume/resume.pdf" download>my resume</a>
-                    </div> -->
-                    <a href="./resume/resume.pdf" download>my resume</a>
+                    <div class="resume">
+                        <a href="./resume/resume.pdf" download class="resume-link">my resume</a>
+                    </div>
+                    <!-- <a href="./resume/resume.pdf" download class="resume">my resume</a> -->
                 </div>
 
                 <div class="facts column-2">
