--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                     </div>
 
                     <div class="resume">
-                        <a href="./resume/resume.pdf" download class="resume-link">my resume</a>
+                        <a href="./resume/resume.pdf" download class="resume-link" target="_blank">my resume</a>
                     </div>
                     <!-- <a href="./resume/resume.pdf" download class="resume">my resume</a> -->
                 </div>
@@ -224,7 +224,7 @@
             <li><p class="copy-c">&copy;</p></li>
             <li><p class="copyright-d">copyright Meika Freckelton | 2020</p></li>
             <li><a target="_blank" href="https://github.com/MeikaFreckelton"><i class="fab fa-github"></i></a></li>
-            <li><a target="_blank" href="https://twitter.com/meikafreckelton""><i class="fab fa-twitter"></i></a></li>
+            <li><a target="_blank" href="https://twitter.com/meikafreckelton"><i class="fab fa-twitter"></i></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/meika-freckelton-269741195/"><i class="fab fa-linkedin"></i></a></li>
         </ul>
     </footer>  
