--- a/contact.html
+++ b/contact.html
@@ -63,9 +63,9 @@
                 <img src="/img/icons/mail.svg" class="contact-icon"></img>
                 <a href="mailto:meikafreckelton@gmail.com">meikafreckelton@gmail.com</a>
                 <div id="contact-links">
-                    <a target="_blank" href="https://github.com/MeikaFreckelton" class="first-link"><i class="fab fa-github"></i></a>
-                    <a target="_blank" href="https://twitter.com/meikafreckelton"><i class="fab fa-twitter"></i></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/meika-freckelton-269741195/"><i class="fab fa-linkedin"></i></a>   
+                    <a href="https://github.com/MeikaFreckelton" class="first-link"><i class="fab fa-github"></i></a>
+                    <a href="https://twitter.com/meikafreckelton"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/meika-freckelton-269741195/"><i class="fab fa-linkedin"></i></a>   
                 </div>
                 
             <!-- put in symbols -->
