--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="menu-options">
             <ul>
                 <li class="col-4"><a href="about.html">Learn about me</a></li>
-                <li class="col-4"><a href="about.html#to-skills">Look at my skills</a></li>
+                <li class="col-4"><a href="about.html#to-skills">Learn about my skills</a></li>
                 <li class="col-4"><a href="projects.html">Look at my projects</a></li>
                 <li class="col-4"><a href="contact.html">Contact me</a></li>
                 <li class="col-4 odd-item-d"><a href="#" >&copy; Copyright Meika Freckelton | 2020</a></li>
