--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,17 @@
     
 
     <script src="https://kit.fontawesome.com/86a9ff069d.js" crossorigin="anonymous"></script>
-    <meta
+    <meta name="description" content="Meika's portfolio site" />
+    <meta name="title" property="og:title" content="_" />
+    <meta property="og:type" content="_" />
+    <meta name="image" property="og:image" content="portfolio-thumbnail.png" />
+    <meta name="description" property="og:description" content="Meika Freckelton's Portfolio" />
+    <meta name="author" content="Meika" />
+    <meta name="keywords" content="Meika Developer Designer React Design Web-Development" >
+    <!-- <meta
       name="description"
       content="Web site created using create-react-app"
-    />
+    /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
